--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,7 @@
     "author"        : "Jeremy Ashkenas <jeremy@documentcloud.org>",
     "contributors"  : [],
     "dependencies"  : {
-        "underscore"  : ">=1.3.1"
+        "jquery"  : ">=1.3.1"
     },
     "lib"           : ".",
     "main"          : "jquery.colorbox.js",
