--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-    "name"          : "Jquery ColorBox",
+    "name"          : "ColorBox",
     "description"   : "Give your JS App some Backbone with Models, Views, Collections, and Events.",
     "url"           : "http://backbonejs.org",
     "keywords"      : ["util", "functional", "server", "client", "browser"],
@@ -9,6 +9,6 @@
         "jquery"  : ">=1.3.1"
     },
     "lib"           : ".",
-    "main"          : "jquery.colorbox.js",
+    "main"          : "colorbox.js",
     "version"       : "1.3.19"
 }
